tests/fixtures/comments_commented_code/negatives/neg_section_banners.py
"""Section/banner header comments that divide a file into logical regions."""

from __future__ import annotations

# ---------------------------------------------------------------------------
# Configuration
# ---------------------------------------------------------------------------

DEFAULT_TIMEOUT = 30

# ===========================================================================
# Public API
# ===========================================================================


def public_call() -> None:
    pass


# ---------------------------- Internal helpers -----------------------------


def _helper() -> None:
    pass


# === Constants ===
# --- Database layer ---
# ########## tests ##########
MAX_RETRIES = 3
